sandbox/output
MedicineClashTest.java:34: error: cannot find symbol
        assertEquals(expectedClashedSet, MedicineClash.of(customers));
                                                      ^
  symbol:   method of(Set<Customer>)
  location: class MedicineClash
1 error
